--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.59.9",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-popover-view": "^2.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^3.11.0"
   },
