--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-animate-loading-button": "^1.0.3",
     "react-native-autolink": "^1.8.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
